--- a/branches/SQUID_2_7/configure.in
+++ b/branches/SQUID_2_7/configure.in
@@ -711,6 +711,19 @@ AC_ARG_ENABLE(ssl,
   fi
 ])
 
+USE_SQUID_MD5=0
+AC_ARG_WITH(system-md5,
+[  --without-system-md5    Disable the use of any system provided MD5
+			  Implementation forcing fallback on the internal
+			  implementation shipped with Squid],
+[
+  case "$enableval" in
+  no)
+	AC_DEFINE(USE_SQUID_MD5, 1, [Define this to force use of the internal MD5 implementation])
+	;;
+  esac
+])
+
 dnl User may specify OpenSSL is needed from a non-standard location
 AC_ARG_WITH(openssl,
 [  --with-openssl[=prefix]
@@ -1636,6 +1649,7 @@ AC_CHECK_HEADERS(
 	sys/file.h \
 	sys/ioctl.h \
 	sys/mount.h \
+	md5.h \
 	sys/md5.h \
 	sys/msg.h \
 	sys/prctl.h \
@@ -2106,11 +2120,13 @@ dnl Check for libcrypt
 dnl Some of our helpers use crypt(3) which may be in libc, or in
 dnl libcrypt (eg FreeBSD)
 AC_CHECK_LIB(crypt, crypt, [CRYPTLIB=" -lcrypt "])
+AC_SUBST(CRYPTLIB)
 
 dnl Solaris10 provides MD5 natively through libmd5
-AC_CHECK_LIB(md5, MD5Init, [CRYPTLIB+=" -lmd5 "])
+AC_CHECK_LIB(md5, MD5Init)
 
-AC_SUBST(CRYPTLIB)
+dnl FreeBSD provides MD5 natively through libmd
+AC_CHECK_LIB(md, MD5Init)
 
 dnl Check for libdl, used by auth_modules/PAM
 if test "$with_dl" = "yes"; then
@@ -2338,6 +2354,7 @@ AC_CHECK_FUNCS(\
 	lrand48 \
 	mallinfo \
 	mallocblksize \
+	MD5Init \
 	mallopt \
 	memcpy \
 	memmove \
