--- a/branches/SQUID_2_7/include/autoconf.h.in
+++ b/branches/SQUID_2_7/include/autoconf.h.in
@@ -206,6 +206,12 @@
 /* Define to 1 if you have the `malloc' library (-lmalloc). */
 #undef HAVE_LIBMALLOC
 
+/* Define to 1 if you have the `md' library (-lmd). */
+#undef HAVE_LIBMD
+
+/* Define to 1 if you have the `md5' library (-lmd5). */
+#undef HAVE_LIBMD5
+
 /* Define to 1 if you have the `nsl' library (-lnsl). */
 #undef HAVE_LIBNSL
 
@@ -245,6 +251,12 @@
 
 /* Define to 1 if you have the <math.h> header file. */
 #undef HAVE_MATH_H
+
+/* Define to 1 if you have the `MD5Init' function. */
+#undef HAVE_MD5INIT
+
+/* Define to 1 if you have the <md5.h> header file. */
+#undef HAVE_MD5_H
 
 /* Define to 1 if you have the `memcpy' function. */
 #undef HAVE_MEMCPY
@@ -809,6 +821,9 @@
 /* If you want to log Referer request header values, define this. By default,
    they are written to referer.log in the Squid log directory. */
 #undef USE_REFERER_LOG
+
+/* Define this to force use of the internal MD5 implementation */
+#undef USE_SQUID_MD5
 
 /* Define this to include code for SSL encryption. */
 #undef USE_SSL
