--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -721,7 +721,7 @@ dist-hook:
 	@if [ -f $(top_srcdir)/RELEASENOTES.html ]; then \
 	  cp -p $(top_srcdir)/RELEASENOTES.html $(distdir)/RELEASENOTES.html; \
 	else \
-	  cp $(top_srcdir)/doc/release-notes/release-2.6.html $(distdir)/RELEASENOTES.html; \
+	  cp $(top_srcdir)/doc/release-notes/release.html $(distdir)/RELEASENOTES.html; \
 	fi
 
 install-pinger:
