--- a/branches/SQUID_2_7/errors/Makefile.in
+++ b/branches/SQUID_2_7/errors/Makefile.in
@@ -269,7 +269,10 @@ LANGUAGES = \
 		Spanish \
 		Swedish \
 		Traditional_Chinese \
-		Turkish
+		Turkish \
+		Ukrainian-1251 \
+		Ukrainian-koi8-u \
+		Ukrainian-utf8
 
 all: all-am
 
