--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,7 @@ dnl  $Id$
 dnl
 dnl
 dnl
-AC_INIT(Cacheboy/Squid Web Proxy, CACHEBOY_PRE, http://code.google.com/p/cacheboy, cacheboy)
+AC_INIT(Cacheboy/Squid Web Proxy, SVN_PRE, http://code.google.com/p/cacheboy, cacheboy)
 AC_PREREQ(2.52)
 AM_CONFIG_HEADER(include/autoconf.h)
 AC_CONFIG_AUX_DIR(cfgaux)
