--- a/branches/CACHEBOY_PRE/configure.in
+++ b/branches/CACHEBOY_PRE/configure.in
@@ -1,11 +1,11 @@
 dnl
 dnl  Configuration input file for Squid
 dnl
-dnl  $Id$
+dnl  $Id: configure.in 12542 2008-04-13 13:27:23Z adrian.chadd $
 dnl
 dnl
 dnl
-AC_INIT(Cacheboy/Squid Web Proxy, SVN_PRE, http://code.google.com/p/cacheboy, cacheboy)
+AC_INIT(Cacheboy/Squid Web Proxy, $Revision$, http://code.google.com/p/cacheboy, cacheboy)
 AC_PREREQ(2.52)
 AM_CONFIG_HEADER(include/autoconf.h)
 AC_CONFIG_AUX_DIR(cfgaux)
