--- a/libcore/Makefile.am
+++ b/libcore/Makefile.am
@@ -4,13 +4,15 @@ libcore_a_SOURCES = \
 	dlink.c \
 	ctx.c \
 	debug.c \
-	syslog.c
+	syslog.c \
+	gb.c
 
 libcore_a_LIBADD = \
 	dlink.o \
 	ctx.o \
 	debug.o \
-	syslog.o
+	syslog.o \
+	gb.h
 
 noinst_LIBRARIES = \
 	libcore.a
