Shuffle the mempools code out of src/ and into libmem/ . The mempools code can almost exist entirely seperate from src/, save for a couple of reporting functions and 'squid_curtime'.

--- a/branches/CACHEBOY_PRE/configure.in
+++ b/branches/CACHEBOY_PRE/configure.in
@@ -3193,6 +3193,7 @@ dnl done
 AC_OUTPUT([\
 	Makefile \
 	libcore/Makefile \
+	libmem/Makefile \
 	lib/Makefile \
 	scripts/Makefile \
 	scripts/RunCache \
