--- a/branches/CACHEBOY_PRE/src/Makefile.am
+++ b/branches/CACHEBOY_PRE/src/Makefile.am
@@ -273,6 +273,7 @@ nodist_squid_SOURCES = \
 squid_LDADD = \
 	-L../lib \
 	-L../libcore \
+	-L../libmem \
 	@XTRA_OBJS@ \
 	@REPL_OBJS@ \
 	@STORE_OBJS@ \
@@ -285,6 +286,7 @@ squid_LDADD = \
 	@LIB_EPOLL@ \
 	-lmiscutil \
 	-lcore \
+	-lmem \
 	@XTRA_LIBS@ \
 	$(MINGWEXLIB)
 
@@ -322,7 +324,7 @@ sysconf_DATA = \
 data_DATA = \
 	mib.txt
 
-LDADD = -L../lib -L../libcore -lmiscutil -lcore @XTRA_LIBS@
+LDADD = -L../lib -L../libcore -L../libmem -lmiscutil -lcore -lmem @XTRA_LIBS@
 
 EXTRA_DIST = \
 	cf_gen_defines \
