Capitalise this so it appears correct(er) in version strings.

--- a/branches/CACHEBOY_PRE/configure.in
+++ b/branches/CACHEBOY_PRE/configure.in
@@ -5,7 +5,7 @@ dnl  $Id: configure.in 12542 2008-04-13 13:27:23Z adrian.chadd $
 dnl
 dnl
 dnl
-AC_INIT(Cacheboy/Squid Web Proxy, $Revision$, http://code.google.com/p/cacheboy, cacheboy)
+AC_INIT(Cacheboy/Squid Web Proxy, $Revision$, http://code.google.com/p/cacheboy, Cacheboy)
 AC_PREREQ(2.52)
 AM_CONFIG_HEADER(include/autoconf.h)
 AC_CONFIG_AUX_DIR(cfgaux)
